added test to load data from csv file using reposoitory

--- a/inventory-manager/src/main/resources/application.properties
+++ b/inventory-manager/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=inventory-manager
 
 # Options: sample, csv
 inventory.repository.source=csv
+
+# CSV Inventory Repository Configuration
+inventory.csv.filepath=data/products.csv
